# SKIPPER

./: .gitignore  12490080005604205.json  214056067.json  licence  loader.py  main.py  pyproject.toml  readme.md  requirements.txt  utils.py
Bots/: wattpadBot.py  webnovelBot.py
Proxies/: proxiesGetter.py  proxy_sources.py
