[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
name = "root"
version = "0.0.0"
description = "description"
[tool.poetry.dependencies]
fake-useragent = "==0.1.11"
prompt-toolkit = "==1.0.14"
pyinquirer = "==1.0.3"
python = "^3.8"
rsa = "==4.0"
tqdm = "==4.36.1"
lxml = "^4.6.5"
requests = "^2.26.0"
cachetools = "^4.2.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
